force-app/main/default/objects/Appointment__c/fields/Concert_Set__c.field-meta.xml
<CustomField>
    <fullName>Concert_Set__c</fullName>
    <description>List of songs to be performed at a concert</description>
    <label>Concert_Set</label>
    <type>TextArea</type>
</CustomField>