force-app/main/default/objects/Appointment__c/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <description>To be used for correspondence with the client</description>
    <label>Contact Email</label>
    <type>Email</type>
</CustomField>