force-app/main/default/objects/Appointment__c/fields/Date_And_Time__c.field-meta.xml
<CustomField>
    <fullName>Date_And_Time__c</fullName>
    <description>The time and date an idol or idol group is set to appear</description>
    <label>Date and Time</label>
    <type>DateTime</type>
</CustomField>