force-app/main/default/objects/Appointment__c/fields/Estimated_Movie_Release__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Movie_Release__c</fullName>
    <label>Estimated Movie Release</label>
    <type>Date</type>
</CustomField>