force-app/main/default/objects/Appointment__c/fields/Idol__c.field-meta.xml
<CustomField>
    <fullName>Idol__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Idol</label>
    <referenceTo>Idol__c</referenceTo>
    <relationshipName>Logistics</relationshipName>
    <type>Lookup</type>
</CustomField>