force-app/main/default/objects/Appointment__c/fields/Idol_Group__c.field-meta.xml
<CustomField>
    <fullName>Idol_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To be used if contracting out a group</description>
    <label>Idol Group</label>
    <referenceTo>Idol_Group__c</referenceTo>
    <relationshipName>Logistics</relationshipName>
    <type>Lookup</type>
</CustomField>