force-app/main/default/objects/Appointment__c/fields/Managing_Location__c.field-meta.xml
<CustomField>
    <fullName>Managing_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Managing Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>