force-app/main/default/objects/Appointment__c/fields/Payment_Rendered__c.field-meta.xml
<CustomField>
    <fullName>Payment_Rendered__c</fullName>
    <description>Money paid for contracting out idol talent</description>
    <label>Payment Rendered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>