force-app/main/default/objects/Appointment__c/recordTypes/Acting_Gig.recordType-meta.xml
<RecordType>
    <fullName>Acting_Gig</fullName>
    <active>true</active>
    <description>To be used when an idol acts in a film or show</description>
    <label>Acting Gig</label>
</RecordType>