force-app/main/default/objects/Appointment__c/recordTypes/Concert.recordType-meta.xml
<RecordType>
    <fullName>Concert</fullName>
    <active>true</active>
    <description>To be used when scheduling a concert</description>
    <label>Concert</label>
</RecordType>