force-app/main/default/objects/Appointment__c/recordTypes/Idol_Orientation.recordType-meta.xml
<RecordType>
    <fullName>Idol_Orientation</fullName>
    <active>true</active>
    <description>To be used for Idol Orientation for newly recruited trainees and idols</description>
    <label>Idol Orientation</label>
</RecordType>