force-app/main/default/objects/Appointment__c/recordTypes/Music_Video_Shoot.recordType-meta.xml
<RecordType>
    <fullName>Music_Video_Shoot</fullName>
    <active>true</active>
    <description>To be used when filming a music video</description>
    <label>Music Video Shoot</label>
</RecordType>