force-app/main/default/objects/Appointment__c/validationRules/No_Past_Appointments.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Past_Appointments</fullName>
    <active>true</active>
    <description>Appointments must be made at a future date, not in the past or the present</description>
    <errorConditionFormula>Date_And_Time__c  &lt;=   NOW()</errorConditionFormula>
    <errorDisplayField>Date_And_Time__c</errorDisplayField>
    <errorMessage>Appointments cannot be made in the past</errorMessage>
</ValidationRule>